--- a/barrera-motoshop/package.json
+++ b/barrera-motoshop/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "sass": "^1.58.3",
     "sweetalert2": "^11.7.2"
   },
   "devDependencies": {
